# skillreducer

./: .env.example  .gitignore  CITATION.md  LICENSE  PAPER_DETAIL.md  README.md  build_binary.py  config.example.yaml  config.yaml  pyproject.toml  run.py  skillreducer.spec
.cursor/rules/python-docstrings/: rule.mdc
.cursor/rules/python-modern/: rule.mdc
.cursor/rules/python-solid/: solid-docstring.cursorrules
.github/workflows/: build-binary.yml
data/: README.md
data/api-testing/: SKILL.md
data/marketing-strategy/: SKILL.md
data/pdf-processing/: SKILL.md
data/sql-analytics/: SKILL.md  reference.md
skillreducer/: __init__.py  __main__.py  agent.py  agent_prompts.py  audit.py  cli.py  config.py  model.py  pipeline.py  report.py
skillreducer/llm/: agno_client.py  client.py  json_util.py  prompts.py
skillreducer/stage1/: README.md  __init__.py  agent.py  compress.py  ddmin.py  generate.py  oracle.py  prompts.py  segment.py
skillreducer/stage2/: README.md  classify.py  dedup.py  disclose.py
skillreducer/stage3/: README.md  __init__.py  agent.py  extract.py  scan.py
src/skillreducer/: __init__.py  agent.py  audit.py  cli.py  model.py  models.py  parser.py  pipeline.py  tokenizer.py
src/skillreducer/llm/: __init__.py  client.py  prompts.py
src/skillreducer/stage1/: compress.py  ddmin.py  generate.py
src/skillreducer/stage2/: __init__.py  compress.py
tests/: test_agent.py  test_audit.py  test_config.py  test_data_skills.py  test_ddmin.py  test_json_util.py  test_oracle.py  test_parser.py  test_stage1_agent.py  test_stage3.py
tests/fixtures/sample-pdf-skill/: SKILL.md
