[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillreducer"
version = "0.1.0"
description = "Optimize Cursor Agent Skills for token efficiency (SkillReducer framework)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "zealgoswami-lab" }]
keywords = ["cursor", "llm", "skills", "prompt-compression", "agents"]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "tiktoken>=0.7",
    "openai>=1.40",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
skillreducer = "skillreducer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
